worked on freakin maven-repo

--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,14 @@
 	<artifactId>gwt-mvp-prototype</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>ch.kdev.todo</name>
 
 	<properties>
-		<!-- Convenience property to set the GWT version -->
-		<gwtVersion>2.4.0</gwtVersion>
+		<!-- Project properties -->
+		<target.jdk>1.6</target.jdk>
+		<webapp.directory>${project.build.directory}/${project.build.finalName}</webapp.directory>
+
+		<!-- Dependencies versions -->
+		<gwt.version>2.4.0</gwt.version>
 
 		<!-- GWT needs at least java 1.6 -->
 		<maven.compiler.source>1.6</maven.compiler.source>
@@ -20,18 +23,29 @@
 		<!-- Don't let your Mac use a crazy non-standard encoding -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+		<!-- Plugin properties -->
+		<gwt-maven-plugin.version>2.3.0-1</gwt-maven-plugin.version>
+		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
+		<maven-eclipse-plugin.version>2.8</maven-eclipse-plugin.version>
+		<maven-clean-plugin.version>2.4.1</maven-clean-plugin.version>
 	</properties>
 
 	<dependencies>
-		<!-- Google Web Toolkit (GWT) -->
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-servlet</artifactId>
+			<version>${gwt.version}</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
-			<version>${gwtVersion}</version>
-			<!-- "provided" so that we don't deploy -->
+			<version>${gwt.version}</version>
 			<scope>provided</scope>
 		</dependency>
+
 
 		<!-- For the servlet filter -->
 
@@ -46,7 +60,7 @@
 		<dependency>
 			<groupId>com.google.web.bindery</groupId>
 			<artifactId>requestfactory-server</artifactId>
-			<version>${gwtVersion}</version>
+			<version>${gwt.version}</version>
 		</dependency>
 
 		<dependency>
@@ -54,11 +68,6 @@
 			<artifactId>gin</artifactId>
 			<version>1.5.0</version>
 		</dependency>
-
-		<!-- Generate the decoder needed by RequestFactory Server -->
-		<!-- Doesn't yet work in eclipse. See maven-processor-plugin below. <dependency> 
-			<groupId>com.google.web.bindery</groupId> <artifactId>requestfactory-apt</artifactId> 
-			<version>${gwtVersion}</version> </dependency> -->
 
 		<!-- RequestFactory will use JSR 303 javax.validation if you let it -->
 		<dependency>
@@ -82,7 +91,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+ 
 		<!-- Required by Hibernate validator because slf4j-log4j is optional in 
 			the hibernate-validator POM -->
 		<dependency>
@@ -99,11 +108,10 @@
 
 	<build>
 		<!-- Generate compiled stuff in the folder used for development mode -->
-		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
+		<outputDirectory>${webapp.directory}/WEB-INF/classes</outputDirectory>
+
 
 		<plugins>
-
-			
 			<!-- requestfactory-apt runs an annotation processor (APT) to instrument 
 				its service interfaces so that RequestFactoryServer can decode client requests. 
 				Normally you would just have a dependency on requestfactory-apt with <scope>provided</scope>, 
@@ -125,7 +133,7 @@
 					<dependency>
 						<groupId>com.google.web.bindery</groupId>
 						<artifactId>requestfactory-apt</artifactId>
-						<version>${gwtVersion}</version>
+						<version>${gwt.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -152,99 +160,100 @@
 				</executions>
 			</plugin>
 
-			<!-- GWT Maven Plugin -->
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<source>${target.jdk}</source>
+					<target>${target.jdk}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+
+			<!-- Eclipse configuration -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>${maven-eclipse-plugin.version}</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+					<wtpversion>2.0</wtpversion>
+					<additionalBuildcommands>
+						<buildCommand>com.google.gwt.eclipse.core.gwtProjectValidator</buildCommand>
+					</additionalBuildcommands>
+					<additionalProjectnatures>
+						<projectnature>com.google.gwt.eclipse.core.gwtNature</projectnature>
+						<projectnature>com.google.appengine.eclipse.core.gaeNature</projectnature>
+					</additionalProjectnatures>
+					<sourceIncludes>
+						<sourceInclude>*.ui.xml</sourceInclude>
+					</sourceIncludes>
+				</configuration>
+			</plugin>
+
+			<!-- GWT configuration -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.3.0-1</version>
+				<version>${gwt-maven-plugin.version}</version>
+				<configuration>
+					<hostedWebapp>${webapp.directory}</hostedWebapp>
+					<copyWebapp>true</copyWebapp>
+					<runTarget>Main.html</runTarget>
+					<mode>htmlunit</mode>
+					<module>ch.kdev.todo.Main</module>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
 				<dependencies>
 					<dependency>
 						<groupId>com.google.gwt</groupId>
 						<artifactId>gwt-user</artifactId>
-						<version>${gwtVersion}</version>
+						<version>${gwt.version}</version>
 					</dependency>
 					<dependency>
 						<groupId>com.google.gwt</groupId>
 						<artifactId>gwt-dev</artifactId>
-						<version>${gwtVersion}</version>
+						<version>${gwt.version}</version>
 					</dependency>
 					<dependency>
 						<groupId>com.google.gwt</groupId>
 						<artifactId>gwt-servlet</artifactId>
-						<version>${gwtVersion}</version>
+						<version>${gwt.version}</version>
 					</dependency>
 				</dependencies>
-				<!-- JS is only needed in the package phase, this speeds up testing -->
-				<executions>
-					<execution>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-				</executions>
-
-				<!-- Plugin configuration. There are many available options, see gwt-maven-plugin 
-					documentation at codehaus.org -->
-				<configuration>
-					<!-- URL that should be automatically opened in the GWT shell (gwt:run). -->
-					<runTarget>main.html</runTarget>
-					<!-- Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile) -->
-					<compileReport>true</compileReport>
-					<module>ch.kdev.todo.Main</module>
-					<logLevel>INFO</logLevel>
-					<style>${gwt.style}</style>
-
-					<copyWebapp>true</copyWebapp>
-				</configuration>
 			</plugin>
 
-			<!-- Copy static web files before executing gwt:run -->
+			<!-- Delete gwt generated stuff -->
 			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.4.2</version>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src/main/webapp</directory>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Mark the project for Google Plugin for Eclipse (GPE) -->
-			<plugin>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>${maven-clean-plugin.version}</version>
 				<configuration>
-					<downloadSources>true</downloadSources>
-					<downloadJavadocs>false</downloadJavadocs>
-					<wtpversion>2.0</wtpversion>
-					<additionalBuildcommands>
-						<buildCommand>
-							<name>com.google.gwt.eclipse.core.gwtProjectValidator</name>
-						</buildCommand>
-					</additionalBuildcommands>
-					<additionalProjectnatures>
-						<projectnature>com.google.gwt.eclipse.core.gwtNature</projectnature>
-					</additionalProjectnatures>
+					<filesets>
+						<fileset>
+							<directory>.gwt</directory>
+						</fileset>
+						<fileset>
+							<directory>www-test</directory>
+						</fileset>
+					</filesets>
 				</configuration>
 			</plugin>
 		</plugins>
-
-		<!-- Required by m2e for import into eclipse. No effect on command line 
-			builds -->
 		<pluginManagement>
 			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -254,41 +263,19 @@
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>org.datanucleus</groupId>
-										<artifactId>maven-datanucleus-plugin</artifactId>
-										<versionRange>[1.1.4,)</versionRange>
-										<goals>
-											<goal>enhance</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>net.kindleit</groupId>
-										<artifactId>maven-gae-plugin</artifactId>
-										<versionRange>[0.7.3,)</versionRange>
-										<goals>
-											<goal>unpack</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<execute />
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
 										<groupId>org.bsc.maven</groupId>
-										<artifactId>maven-processor-plugin</artifactId>
-										<versionRange>[2.0.5,)</versionRange>
+										<artifactId>
+											maven-processor-plugin
+										</artifactId>
+										<versionRange>
+											[2.0.5,)
+										</versionRange>
 										<goals>
 											<goal>process</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<execute />
+										<ignore></ignore>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
