--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Wed Sep 28 17:37:33 CEST 2011
+#Tue Oct 11 20:04:04 CEST 2011
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
-warSrcDir=war
-warSrcDirIsOutput=true
+warSrcDir=src/main/webapp
+warSrcDirIsOutput=false
