--- a/.settings/org.eclipse.jdt.apt.core.prefs
+++ b/.settings/org.eclipse.jdt.apt.core.prefs
@@ -1,5 +1,6 @@
-#Sun Oct 09 23:49:49 CEST 2011
+#Tue Oct 11 23:00:58 CEST 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.apt.aptEnabled=true
 org.eclipse.jdt.apt.genSrcDir=.apt_generated
+org.eclipse.jdt.apt.processorOptions/verbose=false
 org.eclipse.jdt.apt.reconcileEnabled=true
