--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,5 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT"/>
-	<classpathentry kind="output" path="target/gwt-mvp-prototype-1.0-SNAPSHOT/WEB-INF/classes"/>
+	<classpathentry kind="output" path="target/gwt-mvp-prototype-0.1.0/WEB-INF/classes"/>
 </classpath>
