--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
 		<!-- Plugin properties -->
 		<gwt.version>2.4.0</gwt.version>
+		<hibernate.version>3.6.7.Final</hibernate.version>
+		<postgresql.version>9.0-801.jdbc4</postgresql.version>
 		<gwt-maven-plugin.version>2.3.0-1</gwt-maven-plugin.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-eclipse-plugin.version>2.8</maven-eclipse-plugin.version>
@@ -28,6 +30,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+
+	<repositories>
+		<!-- For hibernate support -->
+		<repository>
+			<id>jboss</id>
+			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -52,6 +62,34 @@
 			<version>1.5.0</version>
 		</dependency>
 
+		<!-- Hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+
+		<!-- Hibernate gives you a choice of bytecode providers between cglib and 
+			javassist -->
+		<dependency>
+			<groupId>javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.9.0.GA</version>
+		</dependency>
+
+		<!-- specify the dependent jdbc driver here -->
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>${postgresql.version}</version>
+		</dependency>
+
+		<!-- JUnit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
 
 		<!-- For the servlet filter -->
 		<dependency>
@@ -233,22 +271,27 @@
 				</dependencies>
 			</plugin>
 
-			<!-- Delete gwt generated stuff -->
+			<!-- maven test plugin -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-clean-plugin</artifactId>
-				<version>${maven-clean-plugin.version}</version>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.6</version>
 				<configuration>
-					<filesets>
-						<fileset>
-							<directory>.gwt</directory>
-						</fileset>
-						<fileset>
-							<directory>www-test</directory>
-						</fileset>
-					</filesets>
+					<additionalClasspathElements>
+						<additionalClasspathElement>${project.build.sourceDirectory}</additionalClasspathElement>
+						<additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
+					</additionalClasspathElements>
+					<excludes>
+						<!-- skip all GwtTest, when executed by maven test plugin -->
+						<exclude>**/*GwtTest.java</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
+
+			<!-- Delete gwt generated stuff <plugin> <groupId>org.apache.maven.plugins</groupId> 
+				<artifactId>maven-clean-plugin</artifactId> <version>${maven-clean-plugin.version}</version> 
+				<configuration> <filesets> <fileset> <directory>.gwt</directory> </fileset> 
+				<fileset> <directory>www-test</directory> </fileset> </filesets> </configuration> 
+				</plugin> -->
 		</plugins>
 		<pluginManagement>
 			<plugins>
