--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,6 @@
-#Tue Oct 11 20:04:04 CEST 2011
+#Thu Oct 20 22:06:58 CEST 2011
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
+lastWarOutDir=/home/philipp/Development/GWT/gwt-mvp-prototype/target/gwt-mvp-prototype-0.1.0
 warSrcDir=src/main/webapp
 warSrcDirIsOutput=false
