--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<!-- Plugin properties -->
 		<gwt.version>2.4.0</gwt.version>
 		<hibernate.version>3.6.7.Final</hibernate.version>
-		<postgresql.version>9.0-801.jdbc4</postgresql.version>
+		<mysql.version>5.1.18</mysql.version>
 		<gwt-maven-plugin.version>2.3.0-1</gwt-maven-plugin.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-eclipse-plugin.version>2.8</maven-eclipse-plugin.version>
@@ -77,11 +77,10 @@
 			<version>3.9.0.GA</version>
 		</dependency>
 
-		<!-- specify the dependent jdbc driver here -->
 		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>${postgresql.version}</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.version}</version>
 		</dependency>
 
 		<!-- JUnit -->
