--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" output="target/gwt-mvp-prototype-0.1.0/WEB-INF/classes" path="src/main/java"/>
 	<classpathentry excluding="**" kind="src" output="target/gwt-mvp-prototype-0.1.0/WEB-INF/classes" path="src/main/resources"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
@@ -15,5 +16,6 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry excluding="**" kind="src" output="target/gwt-mvp-prototype-0.1.0/WEB-INF/classes" path="resources"/>
 	<classpathentry kind="output" path="target/gwt-mvp-prototype-0.1.0/WEB-INF/classes"/>
 </classpath>
