--- a/pom.xml
+++ b/pom.xml
@@ -89,12 +89,19 @@
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 		</dependency>
-		
+
 		<!-- gwt-log -->
 		<dependency>
 			<groupId>com.allen-sauer.gwt.log</groupId>
 			<artifactId>gwt-log</artifactId>
 			<version>3.1.6</version>
+		</dependency>
+
+		<!-- gwt-vl -->
+		<dependency>
+			<groupId>eu.maydu.gwt</groupId>
+			<artifactId>gwt-vl</artifactId>
+			<version>2.0b</version>
 		</dependency>
 
 		<!-- For the servlet filter -->
