--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,13 @@
 		<!-- Project properties -->
 		<target.jdk>1.6</target.jdk>
 		<webapp.directory>${project.build.directory}/${project.build.finalName}</webapp.directory>
+		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
 
 		<!-- Plugin properties -->
 		<gwt.version>2.4.0</gwt.version>
 		<hibernate.version>3.6.7.Final</hibernate.version>
 		<mysql.version>5.1.18</mysql.version>
-		<gwt-maven-plugin.version>2.3.0-1</gwt-maven-plugin.version>
+		<gwt-maven-plugin.version>2.4.0</gwt-maven-plugin.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-eclipse-plugin.version>2.8</maven-eclipse-plugin.version>
 		<maven-clean-plugin.version>2.4.1</maven-clean-plugin.version>
@@ -161,7 +162,6 @@
 		<!-- Generate compiled stuff in the folder used for development mode -->
 		<outputDirectory>${webapp.directory}/WEB-INF/classes</outputDirectory>
 
-
 		<plugins>
 			<!-- requestfactory-apt runs an annotation processor (APT) to instrument 
 				its service interfaces so that RequestFactoryServer can decode client requests. 
@@ -220,6 +220,10 @@
 					<source>${target.jdk}</source>
 					<target>${target.jdk}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
+					<!-- 
+					<excludes>
+                        <exclude>**/AppStyleDesktop.java</exclude>
+                    </excludes> -->
 				</configuration>
 			</plugin>
 
@@ -256,8 +260,19 @@
 					<runTarget>Todo.html</runTarget>
 					<mode>htmlunit</mode>
 					<module>ch.kdev.todo.Todo</module>
+					<cssFiles>
+						<cssFile>ch/kdev/todo/client/view/resources/AppStyleDesktop.css</cssFile>
+					</cssFiles>
+					<generateDirectory>${sourceDirectory}</generateDirectory>
 				</configuration>
 				<executions>
+					<execution>
+						<id>css-generation</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>css</goal>
+						</goals>
+					</execution>
 					<execution>
 						<goals>
 							<goal>compile</goal>
@@ -283,6 +298,29 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+<!-- 
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
+				<executions>
+					<execution>
+						<id>copy-generated-files</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${sourceDirectory}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${project.build.directory}/generated-sources/gwt</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>-->
+
 
 			<!-- maven test plugin -->
 			<plugin>
@@ -328,6 +366,25 @@
 										</versionRange>
 										<goals>
 											<goal>process</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											gwt-maven-plugin
+										</artifactId>
+										<versionRange>
+											[2.4.0,)
+										</versionRange>
+										<goals>
+											<goal>css</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
