--- a/src/main/resources/ch/kdev/todo/client/view/resources/ClientMessages.properties
+++ b/src/main/resources/ch/kdev/todo/client/view/resources/ClientMessages.properties
@@ -1,7 +1,1 @@
-manageProjects = Manage Projects
-addProject = Add Project
-viewProject = View Project
-deleteProject = Delete Project
-editProject = Edit Project
-
-addTask = Add Task
+dummy = dummy
